# Design-Patterns

./: .gitignore  CMakeLists.txt  README.md
AbstractFactoryPattern/: README.md  abstractfactorypattern.cpp  clothes.cpp  clothes.h  clothesfactory.cpp  clothesfactory.h
BuilderPattern/: README.md  builderpattern.cpp  director.cpp  director.h  scene.cpp  scene.h  scenebuilder.h  scenebuilder2d.cpp  scenebuilder2d.h
ChainOfResponsibilityPattern/: README.md  chainofresponsibilitypattern.cpp  methods.cpp  methods.h  solvehandler.cpp  solvehandler.h  utility.cpp  utility.h
DecoratorPattern/: README.md  decoratorpattern.cpp  photowindow.cpp  photowindow.h
ProxyPattern/: README.md  filemanager.cpp  filemanager.h  proxypattern.cpp
